--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="syussya">ｼｭｯｼｬ</string>
     <string name="taisya">ﾀｲｼｬ</string>
+    <string name="title_activity_authoricate">AuthoricateActivity</string>
 
 </resources>
