fix login callback method
implements error handling

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="taisya">ﾀｲｼｬ</string>
     <string name="title_activity_authoricate">AuthoricateActivity</string>
     <string name="signinWithTwitter">Singin in with Twitter</string>
+    <string name="msg_login_failed">ログインに失敗しました</string>
 
 </resources>
