ｼｭｯｼｬ、ﾀｲｼｬをするウィジェットを実装しました
ホーム画面に置いて、ボタンを押すとｼｭｯｼｬ、ﾀｲｼｬできます

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,7 @@
     <string name="title_activity_authoricate">AuthoricateActivity</string>
     <string name="signinWithTwitter">Singin in with Twitter</string>
     <string name="msg_login_failed">ログインに失敗しました</string>
+    <string name="appwidget_text">EXAMPLE</string>
+    <string name="add_widget">Add widget</string>
 
 </resources>
